[package]
name = "rbxlk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
poise = "0.5.6"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "migrate", "macros", "bigdecimal", "time" ] }
roboat = "0.34.2"
rand = "0.8.5"